syntax = "proto3";

option go_package = "github.com/sroze/fossil/streamstore/api/index";

message IndexCreated {
  string id = 1;
  string prefix = 2;
}
